# esphttpd

./: .gitignore  CLAUDE.md  CMakeLists.txt  Kconfig  LICENSE  README.md  component.mk  esphttpd.c  idf_component.yml
.github/workflows/: test.yml
examples/: example_app.c
include/: esphttpd.h
scripts/: run_tests.sh
src/: connection.c  esphttpd.c  event_loop.c  filesystem.c  http_parser.c  radix_tree.c  raw_tcp.c  router_api.c  send_buffer.c  template.c  websocket.c
src/private/: connection.h  event_loop.h  filesystem.h  http_parser.h  radix_tree.h  raw_tcp.h  send_buffer.h  template.h  test_exports.h  websocket.h
test_app/: CMakeLists.txt  PERF_BASELINE.md  README.md  run_and_monitor.sh  run_qemu_tests.sh  run_tests.py  sdkconfig  sdkconfig.defaults  test_qemu.sh
test_app/main/: CMakeLists.txt  test_app_main.c  test_connection.c  test_defer.c  test_event_loop.c  test_filesystem.c  test_http_api.c  test_http_parser.c  test_integration.c  test_middleware.c  test_nonblocking.c  test_performance.c  test_radix_tree.c  test_router_api.c  test_send_buffer.c  test_template.c  test_websocket_api.c  test_websocket_frame.c
test_app/test_e2e/: sdkconfig
test_e2e/: .gitignore  CMakeLists.txt  QEMU_NETWORKING_NOTES.md  README.md  idf_component.yml  perf_compare.sh  run_e2e_server.sh  run_full_e2e.sh  sdkconfig  sdkconfig.defaults  test_concurrent.js  test_curl.sh  test_perf.py  test_perf.sh
test_e2e/jest-tests/: README.md  jest.setup.ts  package-lock.json  package.json  test-utils.ts  tsconfig.json
test_e2e/jest-tests/__tests__/: auth-upload.test.ts  auth.test.ts  connection-edge-cases.test.ts  cors.test.ts  error-handling.test.ts  expect-continue.test.ts  http-routes.test.ts  large-file.test.ts  non-chunked-body.test.ts  provider-perf.test.ts  query-params.test.ts  static-files.test.ts  template.test.ts  untested-endpoints.test.ts  upload.test.ts  websocket.test.ts
test_e2e/main/: CMakeLists.txt  main.c
